--- a/docs/.vuepress/public/manifest.json
+++ b/docs/.vuepress/public/manifest.json
@@ -10,7 +10,7 @@
   },
   "dir": "auto",
   "short_name": "5102",
-  "start_url": "https://docs.5102it.cn",
+  "start_url": "https://docs.5102it.cn/",
   "lang": "zh-CH",
   "display": "standalone",
   "theme_color": "#35363A",
