--- a/docs/.vuepress/public/manifest.json
+++ b/docs/.vuepress/public/manifest.json
@@ -3,7 +3,7 @@
   "categories": ["front-end", "technology", "document"],
   "scope": "https://docs.5102it.cn/",
   "short_name": "5102",
-  "start_url": "https://docs.5102it.cn",
+  "start_url": "https://docs.5102it.cn/",
   "lang": "zh-CH",
   "display": "standalone",
   "theme_color": "#3367D6",
