--- a/docs/.vuepress/public/manifest.json
+++ b/docs/.vuepress/public/manifest.json
@@ -7,7 +7,7 @@
   ],
   "scope": "https://docs.5102it.cn/",
   "short_name": "5102",
-  "start_url": "https://docs-1258613188.file.myqcloud.com/docs.5102it.cn/",
+  "start_url": "https://docs.5102it.cn/",
   "lang": "zh-CH",
   "display": "standalone",
   "theme_color": "#3367D6",
