--- a/docs/.vuepress/public/manifest.json
+++ b/docs/.vuepress/public/manifest.json
@@ -6,8 +6,8 @@
     "document"
   ],
   "short_name": "5102",
-  "start_url": "https://docs-1258613188.file.myqcloud.com/index.html",
-  "scope": "https://docs-1258613188.file.myqcloud.com",
+  "start_url": "https://docs.5102it.cn/index.html",
+  "scope": "https://docs.5102it.cn",
   "lang": "zh-CH",
   "theme_color": "#3367D6",
   "display": "standalone",
