--- a/docs/.vuepress/public/manifest.json
+++ b/docs/.vuepress/public/manifest.json
@@ -3,7 +3,8 @@
   "categories": [
     "front-end",
     "technology",
-    "document"
+    "document",
+    "5102"
   ],
   "short_name": "5102",
   "start_url": "https://docs.5102it.cn/index.html",
