--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@vuepress/plugin-pwa": "^1.8.2",
     "dotenv": "^8.6.0",
     "gulp": "^4.0.2",
+    "gulp-cli": "^2.3.0",
     "gulp-htmlmin": "^5.0.1",
     "gulp-qcloud-cos-upload": "^1.1.4",
     "html-webpack-plugin": "^4.5.2",
@@ -28,6 +29,5 @@
     "vuepress-plugin-img-lazy": "^1.0.4",
     "vuepress-plugin-seo": "^0.1.4",
     "vuepress-plugin-smooth-scroll": "^0.0.9"
-  },
-  "dependencies": {}
+  }
 }
